# pixmask

./: .clang-format  .cloudready  .gitattributes  .gitignore  CMakeLists.txt  LICENSE  README.md  ROADMAP.md  pyproject.toml
.github/workflows/: ci.yml  wheels.yml
architecture/: CPP_ARENA_PIPELINE_REFERENCE.md  CPP_JPEG_REFERENCE.md  CPP_MEDIAN_REFERENCE.md  CPP_REFERENCE.md  CPP_VALIDATION_REFERENCE.md  DEBATE.md  DECISIONS.md
benchmarks/: bench.cpp
include/pixmask/: api.h  dct_tables.h  filters.h  image.h  security.h  sr_weights.h  version.h
python/: CMakeLists.txt  bindings.cpp  pyproject.toml
python/pixmask/: __init__.py  __init__.pyi  __main__.py  _native.py
python/pixmask/tests/: test_bench.py  test_bitdepth.py  test_cli.py  test_dct.py  test_pipeline.py  test_pixels.py  test_prefilter.py  test_pybind.py  test_resample.py  test_security.py  test_smoke.py  test_srlite.py  test_threads.py  test_upscale.py
research/: 01_visual_prompt_injection.md  02_adversarial_perturbations.md  03_feature_squeezing_defenses.md  04_frequency_domain_defenses.md  05_steganography_detection.md  06_malformed_image_security.md  07_scaling_attacks.md  08_multimodal_jailbreaks.md  09_cpp_simd_optimization.md  10_nanobind_build_system.md  11_evaluation_methodology.md  12_certified_defenses.md  13_quality_preservation.md  14_spatial_smoothing_algorithms.md  15_existing_defense_libraries.md  FINDINGS.md
src/common/: cpu_caps.cpp  cpu_caps.h  pixel_ops.h  sanitize.cpp  security.cpp  thread_pool.cpp  thread_pool.h
src/cpp/bindings/: module.cpp
src/cpp/include/pixmask/: arena.h  bitdepth.h  decode.h  jpeg_roundtrip.h  median.h  pipeline.h  types.h  validate.h
src/cpp/src/: arena.cpp  bitdepth-inl.h  bitdepth.cpp  decode.cpp  jpeg_roundtrip.cpp  median-inl.h  median.cpp  pipeline.cpp  validate.cpp
src/cpu/: b_spline_prefilter.cpp  bitdepth.cpp  dct8x8.cpp  resample.cpp  sr_lite.cpp
src/tests/cpp/: test_bitdepth.cpp  test_decode.cpp  test_jpeg.cpp  test_median.cpp  test_pipeline.cpp  test_validate.cpp
src/tests/python/: conftest.py  test_sanitize.py
tools/: pixmask_cli.cpp
